syntax = "proto3";
package grpc;

option go_package = "https://github.com/DonCrastiv/INF-343/ProtoLiderName";
import "ProtoLiderJugadores/LiderJugador.proto"; 
/*ARREGLAR ESTE IMPORT Y DESPUES COMPILAR PARA GENERAR .go Y .grpc.go*/

/*ENVIAR JUGADAS*/
message Jugadas {
    repeated Jugada jugadas = 1;
}

message RespuestaJugadas {
    string respuesta = 1;
}

/*SOLICITAR REGISTRO*/
message SolicitudRegistro {
    Etapa Etapa = 1;
    int32 idJugador = 2;
}

message RespuestaRegistro {
    repeated Jugada jugadas = 1;
}

service LiderNameService {
    rpc EnviarJugadas (Jugadas) returns (RespuestaJugadas);
    rpc SolicitarRegistro (SolicitudRegistro) returns (RespuestaRegistro);
}