syntax = "proto3";
package grpc;

option go_package = "https://github.com/DonCrastiv/INF-343/ProtoNameData";
import "ProtoLiderJugadores/LiderJugador.proto"; 
/*ARREGLAR ESTE IMPORT Y DESPUES COMPILAR PARA GENERAR .go Y .grpc.go*/

/*REGISTRAR JUGADAS*/
message Jugadas {
    repeated Jugada jugadas = 1;
}

message RespuestaJugadas {
    string respuesta = 1;
}

/*SOLICITAR REGISTRO DE JUGADAS*/
message SolicitudRegistro {
    Etapa Etapa = 1;
    int32 idJugador = 2;
}

message RespuestaRegistro {
    repeated Jugada jugadas = 1;
}

service NameDataService {
    rpc RegistrarJugadas () returns (Response);
}